linked the pages etc

--- a/weekthree/music.html
+++ b/weekthree/music.html
@@ -12,11 +12,11 @@
 		<h1><a id="title" href="index.html">Dr. Breakfast</a></h1>
 
 		<div id="nav">
-			<a href="shows.html">SHOWS</a> | <a href="music.html">MUSIC</a> | <a href="podcast.html">PODCAST</a> | <a href="mailto:drbreakfast@gmail.com">CONTACT</a>
+			<a href="shows.html">SHOWS</a> | <a id="active">MUSIC</a> | <a href="podcast.html">PODCAST</a> | <a href="mailto:drbreakfast@gmail.com">CONTACT</a>
 			</p>
 		</div>
 
-		<img src="images/docbee.jpg" alt="Doctor Breakfast" href="index.html">
+		<img src="images/docbee.jpg" alt="Doctor Breakfast">
 
 		<p id="slogan">the doc is in.</p>
 
