--- a/unitfour/index.html
+++ b/unitfour/index.html
@@ -4,7 +4,7 @@
 
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href='http://fonts.googleapis.com/css?family=Arvo:400,700|Poiret+One|Covered+By+Your+Grace' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Coda+Caption:800|Gloria+Hallelujah|Bree+Serif' rel='stylesheet' type='text/css'>
 		<title>Dr. Breakfast</title>
 	</head>
 
