syncing the pages

--- a/unitfour/podcast.html
+++ b/unitfour/podcast.html
@@ -4,7 +4,7 @@
 
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css">
-		<link href='http://fonts.googleapis.com/css?family=Coda+Caption:800|Gloria+Hallelujah|Bree+Serif' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Coda+Caption:800|Gloria+Hallelujah|Bree+Serif' rel='stylesheet' type='text/css'>
 		<title>Dr. Breakfast</title>
 	</head>
 
@@ -13,7 +13,7 @@
 		<h1><a id="title" href="index.html">Dr. Breakfast</a></h1>
 
 		<div id="nav">
-			<a href="shows.html">SHOWS</a> | <a href="music.html">MUSIC</a> | <a href="podcast.html">PODCAST</a> | <a href="mailto:drbreakfast@gmail.com">EMAIL HIM</a>
+			<a href="shows.html">SHOWS</a> | <a href="music.html">MUSIC</a> | <a href="podcast.html" id="active">PODCAST</a> | <a href="mailto:drbreakfast@gmail.com">EMAIL HIM</a>
 			</p>
 		</div>
 		
@@ -21,15 +21,7 @@
 
 			<p id="slogan">the doc is in.</p>
 
-			<p>Dr. Breakfast is a musician and rapper living in Brooklyn, NY. Check out his new EP "Brunchlife."</p>
-			<p>The Doctor holds a PhD in Breakfast Studies with thesis work in:</p>
-			<ul>
-				<li>Bacon</li>
-				<li>Eggs</li>
-				<li>Hashbrowns</li>
-				<li>Pancakes</li>
-				<li>Coffee</li>
-			</ul>
+			<p>Download the Dr. Breakfast podcast.</p>
 		</div>
 
 	</body>
