--- a/weekthreev2/index.html
+++ b/weekthreev2/index.html
@@ -17,14 +17,14 @@
 			</p>
 		</div>
 
-		<img src="images/docbee.jpg" alt="Doctor Breakfast">
+		<a href="index.html"><img src="images/docbee.jpg" alt="Doctor Breakfast"></a>
 		
 		<p id="slogan">the doc is in.</p>
 
 		<div id="main-text">
 
 			<p>Dr. Breakfast is a musician and rapper living in Brooklyn, NY. Check out his new EP "Brunchlife."</p>
-			<p>The Doctor holds a PhD in Breakfast studies with thesis work in:</p>
+			<p>The Doctor holds a PhD in Breakfast Studies with thesis work in:</p>
 			<ul>
 				<li>Bacon</li>
 				<li>Eggs</li>
