putting the image into the html not css

--- a/unitfour/index.html
+++ b/unitfour/index.html
@@ -16,6 +16,8 @@
 			<a href="shows.html">SHOWS</a> | <a href="music.html">MUSIC</a> | <a href="podcast.html">PODCAST</a> | <a href="mailto:drbreakfast@gmail.com">EMAIL HIM</a>
 			</p>
 		</div>
+
+		<a href="index.html"><img src="images/docbee.jpg" alt="doctor breakfast"></a>
 		
 		<div id="main-text">
 
