--- a/unitfour/index.html
+++ b/unitfour/index.html
@@ -17,7 +17,7 @@
 			</p>
 		</div>
 
-		<a href="index.html"><img src="images/docbee.jpg" alt="doctor breakfast"></a>
+		<a href="index.html"><img src="docbee.jpg" alt="doctor breakfast"></a>
 		
 		<div id="main-text">
 
