--- a/ashleytypography/index.html
+++ b/ashleytypography/index.html
@@ -4,6 +4,7 @@
 
 <head>
 	<title>Ashley's Typography</title>
+	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700|Ubuntu+Condensed' rel='stylesheet' type='text/css'>
 </head>
@@ -20,10 +21,17 @@
 	</header>
 
 	<div id="wrapper">
-			<img id="featured" src="images/ashleyfeatured.jpg">
-			<img src="images/ashley1.jpg"> <img src="images/ashley2.jpg">
-			<br>
-		  	<img src="images/ashley3.jpg"> <img src="images/ashley2.jpg"> <img src ="images/ashley3.jpg"> <img src="images/ashley1.jpg">
+			<div class="row" id="row1">
+				<a href="index.html"><img id="featured" src="images/ashleyfeatured.jpg"></a>
+				<a href="index.html"><img src="images/ashley1.jpg"></a>
+				<a href="index.html"><img src="images/ashley2.jpg"></a>
+			  	<a href="index.html"><img src="images/ashley3.jpg"></a>
+			</div>
+		  	<div class="row" id="row2"> 
+			  	<a href="index.html"><img src="images/ashley2.jpg"></a>
+			  	<a href="index.html"><img src ="images/ashley3.jpg"></a>
+			  	<a href="index.html"><img src="images/ashley1.jpg"></a>
+			</div>
 	</div>
 
 	<footer>
