--- a/unit8/gallery.html
+++ b/unit8/gallery.html
@@ -21,35 +21,26 @@
 	</header>
 
 	<div class="clearfix" id="main">
-		
-		<a href="gallery.html"><img src="images/docbee2.jpg" class="hide"></a>
-		<a href="gallery.html"><img src="images/docbee.jpg"></a>
-		<a href="gallery.html"><img src="images/docbee3.jpg" class="hide"></a>
 
-		<h2 id="tagline" class="hide">Doctor Breakfast is a producer and rapper living in Brooklyn, NY</h2>
-
-		<div id="upcomingshows" class="hide">
-			<p id="highlight">Upcoming Shows</p>
-
-			<p>5/21 -- Doctor Breakfast at The Flat, 6PM</p>
-			<p>5/31 -- Doctor Breakfast and The Manhattan Project at That One Pub, 9PM</p>
-			<p>6/4 -- Doctor Breakfast and Fuck A Genre at Trash bar, 12AM</p>
-		</div>
+		<h2>Photo Gallery</h2>
+		<img src="images/docbee2.jpg">
+		<img src="images/docbee.jpg">
+		<img src="images/docbee3.jpg">
 
 	</div>
 
-	<footer class="clearfix">
+	<footer>
 		<div id="leftfooter">
-			<h3 class="hide">CONTACT THE DOC</h3>
+			<h3>CONTACT THE DOC</h3>
+			<h4><a href="mailto:drbreakfast@gmail.com">drbreakfast@gmail.com</a></h4>
 			<h4><a href="http://facebook.com/doctorbreakfast" target="blank">FACEBOOK</a></h4>
 			<h4><a href="http://twitter.com/drbreakfast" target="blank">TWITTER</a></h4>
 			<h4><a href="http://instagram.com/doctorbreakfast" target="blank">INSTAGRAM</a></h4>
 			<h4><a href="http://soundcloud.com/doc-bee" target="blank">SOUNDCLOUD</a></h4>
-			<h4><a href="mailto:drbreakfast@gmail.com">drbreakfast@gmail.com</a></h4>
 		</div>
 
 		<div id="rightfooter">
-			<h5 class="hide">&copyBacon and shmEggs</h5>
+		<h5>&copyBacon and shmEggs</h5>
 		</div>
 	</footer>
 </body>
