font awesome icons + photo gallery

--- a/unit8/gallery.html
+++ b/unit8/gallery.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Cabin:400,500,600,700,400italic,500italic,600italic,700italic|Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic|Open+Sans+Condensed:300,700,300italic' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<meta name="viewport" content="width=device-width, initialscale=1">
 </head>
 
@@ -22,21 +23,27 @@
 
 	<div class="clearfix" id="main">
 
-		<h2>Photo Gallery</h2>
+		<h2 class="hide">Photo Gallery</h2>
 		<img src="images/docbee2.jpg">
 		<img src="images/docbee.jpg">
 		<img src="images/docbee3.jpg">
+		<img src="images/docbee4.jpg">
+		<img src="images/docbee5.jpg">
 
 	</div>
 
 	<footer>
-		<div id="leftfooter">
-			<h3>CONTACT THE DOC</h3>
-			<h4><a href="mailto:drbreakfast@gmail.com">drbreakfast@gmail.com</a></h4>
-			<h4><a href="http://facebook.com/doctorbreakfast" target="blank">FACEBOOK</a></h4>
-			<h4><a href="http://twitter.com/drbreakfast" target="blank">TWITTER</a></h4>
-			<h4><a href="http://instagram.com/doctorbreakfast" target="blank">INSTAGRAM</a></h4>
-			<h4><a href="http://soundcloud.com/doc-bee" target="blank">SOUNDCLOUD</a></h4>
+		<div id="contact">
+
+			<a href="http://facebook.com/doctorbreakfast" target="blank"><i class="fa fa-facebook-square"></i></a>
+
+			<a href="http://twitter.com/drbreakfast" target="blank"><i class="fa fa-twitter"></i></a>
+
+			<a href="http://instagram.com/doctorbreakfast" target="blank"><i class="fa fa-instagram"></i></a>
+
+			<a href="http://soundcloud.com/doc-bee" target="blank"><i class="fa fa-soundcloud"></i></a>
+	
+			<a href="mailto:drbreakfast@gmail.com"><i class="fa fa-envelope-o" id="email"></i></a>
 		</div>
 
 		<div id="rightfooter">
