adding "hide" class and changing h3 font in <500px

--- a/unit8/gallery.html
+++ b/unit8/gallery.html
@@ -14,11 +14,13 @@
 <body>
 	<header class="clearfix">
 		<h1><a href="index.html">DOCTOR BREAKFAST</a></h1>
-		<nav>
-			<a href="podcast.html">PODCAST</a>
-			<a href="music.html">MUSIC</a>
+		
+		<nav>			
 			<a href="shows.html">SHOWS</a>
+			<a href="music.html">MUSIC</a>
+			<a href="podcast.html">PODCAST</a>
 		</nav>
+		
 	</header>
 
 	<div class="clearfix" id="main">
@@ -46,7 +48,7 @@
 			<a href="mailto:drbreakfast@gmail.com"><i class="fa fa-envelope-o" id="email"></i></a>
 		</div>
 
-		<div id="rightfooter">
+		<div class="hide" id="rightfooter">
 		<h5>&copyBacon and shmEggs</h5>
 		</div>
 	</footer>
