--- a/unit8/music.html
+++ b/unit8/music.html
@@ -50,7 +50,7 @@
 
 		</div>
 
-		<div id="rightfooter">
+		<div id="rightfooter" class="hide">
 		<h5>&copyBacon and shmEggs</h5>
 		</div>
 	</footer>
