--- a/unit8/podcast.html
+++ b/unit8/podcast.html
@@ -49,7 +49,7 @@
 			<a href="mailto:drbreakfast@gmail.com"><i class="fa fa-envelope-o" id="email"></i></a>
 		</div>
 
-		<div id="rightfooter">
+		<div class="hide" id="rightfooter">
 		<h5>&copyBacon and shmEggs</h5>
 		</div>
 	</footer>
