--- a/unit8/shows.html
+++ b/unit8/shows.html
@@ -44,7 +44,7 @@
 
 		</div>
 
-		<div id="rightfooter">
+		<div class="hide" id="rightfooter">
 		<h5>&copyBacon and shmEggs</h5>
 		</div>
 	</footer>
