--- a/alexbregman/articles.html
+++ b/alexbregman/articles.html
@@ -27,7 +27,7 @@
 
 	<div id="main">
 		<div id="col1" class="column">
-			<h3>LATEST ARTICLES</h3>
+			<h3>ARTICLES</h3>
 
 			<h4>Article One, July 5, 2015</h4>
 			<p>Monocle ipsum dolor sit amet exclusive delightful elegant, Beams Comme des Garcons Boeing 787 ANA izakaya Washlet Ettinger perfect liveable. Wardrobe sophisticated charming, conversation iconic Lufthansa tote bag. Intricate Asia-Pacific flat white, discerning bulletin Scandinavian Nordic handsome boutique Zurich business class Toto destination. Iconic discerning Singapore exquisite, Asia-Pacific Ettinger business class smart bespoke. Marylebone remarkable ANA artisanal Tsutaya. Zurich concierge alluring iconic, ryokan Gaggenau Singapore izakaya Fast Lane remarkable Airbus A380 intricate cutting-edge flat white. Emerging Boeing 787 Washlet the best.</p>
@@ -37,9 +37,20 @@
 			<h4>Article Two, June 27, 2015</h4>
 			<p>Premium Shinkansen smart sleepy. Global Tsutaya eclectic Zurich exclusive pintxos Lufthansa, concierge Helsinki. ANA izakaya joy sleepy. Washlet vibrant intricate Baggu tote bag. First-class exquisite emerging handsome. Nordic tote bag Gaggenau, Lufthansa hand-crafted Baggu joy vibrant concierge international pintxos. Airport Zurich Singapore, intricate Swiss perfect sophisticated handsome uniforms extraordinary Gaggenau sleepy. <a href="#">Read More...</a></p>
 
-			<h3>NEWS</h3>
-			<h4>UPDATE: July 12, 2015</h4>
-			<p>Sophisticated Melbourne global emerging signature Toto hub flat white Lufthansa liveable joy the highest quality quality of life. The highest quality boulevard delightful intricate Singapore efficient. Ettinger essential Winkreative Beams delightful artisanal cutting-edge bulletin first-class business class handsome Gaggenau extraordinary charming signature. Quality of life emerging wardrobe Porter</p>
+			<p>Discerning cutting-edge signature, Sunspel lovely Lufthansa Singapore Comme des Garcons. Shinkansen pintxos liveable Singapore boulevard K-pop bureaux remarkable. Toto first-class alluring handsome Zurich izakaya exclusive. Sophisticated Melbourne global emerging signature Toto hub flat white Lufthansa liveable joy the highest quality quality of life. The highest quality boulevard delightful intricate Singapore efficient. Ettinger essential Winkreative Beams delightful artisanal cutting-edge bulletin first-class business class handsome Gaggenau extraordinary charming signature. Quality of life emerging wardrobe Porter.</p>
+
+			<h4>Article Three, June 27, 2015</h4>
+			<p>Premium Shinkansen smart sleepy. Global Tsutaya eclectic Zurich exclusive pintxos Lufthansa, concierge Helsinki. ANA izakaya joy sleepy. Washlet vibrant intricate Baggu tote bag. First-class exquisite emerging handsome. Nordic tote bag Gaggenau, Lufthansa hand-crafted Baggu joy vibrant concierge international pintxos. Airport Zurich Singapore, intricate Swiss perfect sophisticated handsome uniforms extraordinary Gaggenau sleepy. <a href="#">Read More...</a></p>
+
+			<p>Discerning cutting-edge signature, Sunspel lovely Lufthansa Singapore Comme des Garcons. Shinkansen pintxos liveable Singapore boulevard K-pop bureaux remarkable. Toto first-class alluring handsome Zurich izakaya exclusive. Sophisticated Melbourne global emerging signature Toto hub flat white Lufthansa liveable joy the highest quality quality of life. The highest quality boulevard delightful intricate Singapore efficient. Ettinger essential Winkreative Beams delightful artisanal cutting-edge bulletin first-class business class handsome Gaggenau extraordinary charming signature. Quality of life emerging wardrobe Porter.</p>
+
+			<p>Discerning cutting-edge signature, Sunspel lovely Lufthansa Singapore Comme des Garcons. Shinkansen pintxos liveable Singapore boulevard K-pop bureaux remarkable. Toto first-class alluring handsome Zurich izakaya exclusive. Sophisticated Melbourne global emerging signature Toto hub flat white Lufthansa liveable joy the highest quality quality of life. The highest quality boulevard delightful intricate Singapore efficient. Ettinger essential Winkreative Beams delightful artisanal cutting-edge bulletin first-class business class handsome Gaggenau extraordinary charming signature. Quality of life emerging wardrobe Porter.</p>
+
+			<h4>Article Four, June 28, 2015</h4>
+			<p>Premium Shinkansen smart sleepy. Global Tsutaya eclectic Zurich exclusive pintxos Lufthansa, concierge Helsinki. ANA izakaya joy sleepy. Washlet vibrant intricate Baggu tote bag. First-class exquisite emerging handsome. Nordic tote bag Gaggenau, Lufthansa hand-crafted Baggu joy vibrant concierge international pintxos. Airport Zurich Singapore, intricate Swiss perfect sophisticated handsome uniforms extraordinary Gaggenau sleepy. <a href="#">Read More...</a></p>
+
+			<h4>Article Five, June 27, 2015</h4>
+			<p>Premium Shinkansen smart sleepy. Global Tsutaya eclectic Zurich exclusive pintxos Lufthansa, concierge Helsinki. ANA izakaya joy sleepy. Washlet vibrant intricate Baggu tote bag. First-class exquisite emerging handsome. Nordic tote bag Gaggenau, Lufthansa hand-crafted Baggu joy vibrant concierge international pintxos. Airport Zurich Singapore, intricate Swiss perfect sophisticated handsome uniforms extraordinary Gaggenau sleepy. <a href="#">Read More...</a></p>
 		</div>
 
 		<div id="col2" class="column">
